- HOI4 Shattered USA: Added US state flags for small and medium sizes.

--- a/shattered_usa/localisation/shattered_usa_l_english.yml
+++ b/shattered_usa/localisation/shattered_usa_l_english.yml
@@ -194,118 +194,118 @@ ZKY_democratic_ADJ:0 "Ketuckian"
 ZKY_neutrality_ADJ:0 "Ketuckian"
 ZKY_communism_ADJ:0 "Ketuckian"
 
-ZLA_fascism:0 "Yellowhammer State"
-ZLA_fascism_DEF:0 "The Yellowhammer State"
+ZLA_fascism:0 "Pelican State"
+ZLA_fascism_DEF:0 "The Pelican State"
 ZLA_democratic:0 "Louisiana"
 ZLA_democratic_DEF:0 "Louisiana"
 ZLA_neutrality:0 "Louisiana"
 ZLA_neutrality_DEF:0 "Louisiana"
-ZLA_communism:0 "Yellowhammer Union"
-ZLA_communism_DEF:0 "The Yellowhammer Union"
+ZLA_communism:0 "Pelican Union"
+ZLA_communism_DEF:0 "The Pelican Union"
 ZLA_fascism_ADJ:0 "Louisianan"
 ZLA_democratic_ADJ:0 "Louisianan"
 ZLA_neutrality_ADJ:0 "Louisianan"
 ZLA_communism_ADJ:0 "Louisianan"
 
-ZMD_fascism:0 "Yellowhammer State"
-ZMD_fascism_DEF:0 "The Yellowhammer State"
+ZMD_fascism:0 "Old Line State"
+ZMD_fascism_DEF:0 "The Old Line State"
 ZMD_democratic:0 "Maryland"
 ZMD_democratic_DEF:0 "Maryland"
 ZMD_neutrality:0 "Maryland"
 ZMD_neutrality_DEF:0 "Maryland"
-ZMD_communism:0 "Yellowhammer Union"
-ZMD_communism_DEF:0 "The Yellowhammer Union"
+ZMD_communism:0 "Old Line Union"
+ZMD_communism_DEF:0 "The Old Line Union"
 ZMD_fascism_ADJ:0 "Alabamian"
 ZMD_democratic_ADJ:0 "Alabamian"
 ZMD_neutrality_ADJ:0 "Alabamian"
 ZMD_communism_ADJ:0 "Alabamian"
 
-ZMI_fascism:0 "Yellowhammer State"
-ZMI_fascism_DEF:0 "The Yellowhammer State"
+ZMI_fascism:0 "Great Lakes State"
+ZMI_fascism_DEF:0 "The Great Lakes State"
 ZMI_democratic:0 "Michigan"
 ZMI_democratic_DEF:0 "Michigan"
 ZMI_neutrality:0 "Michigan"
 ZMI_neutrality_DEF:0 "Michigan"
-ZMI_communism:0 "Yellowhammer Union"
-ZMI_communism_DEF:0 "The Yellowhammer Union"
+ZMI_communism:0 "Great Lakes Union"
+ZMI_communism_DEF:0 "The Great Lakes Union"
 ZMI_fascism_ADJ:0 "Michigander"
 ZMI_democratic_ADJ:0 "Michigander"
 ZMI_neutrality_ADJ:0 "Michigander"
 ZMI_communism_ADJ:0 "Michigander"
 
-ZMN_fascism:0 "Yellowhammer State"
-ZMN_fascism_DEF:0 "The Yellowhammer State"
+ZMN_fascism:0 "North Star State"
+ZMN_fascism_DEF:0 "The North Star State"
 ZMN_democratic:0 "Minnesota"
 ZMN_democratic_DEF:0 "Minnesota"
 ZMN_neutrality:0 "Minnesota"
 ZMN_neutrality_DEF:0 "Minnesota"
-ZMN_communism:0 "Yellowhammer Union"
-ZMN_communism_DEF:0 "The Yellowhammer Union"
+ZMN_communism:0 "North Star Union"
+ZMN_communism_DEF:0 "The North Star Union"
 ZMN_fascism_ADJ:0 "Minnesotan"
 ZMN_democratic_ADJ:0 "Minnesotan"
 ZMN_neutrality_ADJ:0 "Minnesotan"
 ZMN_communism_ADJ:0 "Minnesotan"
 
-ZMS_fascism:0 "Yellowhammer State"
-ZMS_fascism_DEF:0 "The Yellowhammer State"
+ZMS_fascism:0 "Magnolia State"
+ZMS_fascism_DEF:0 "The Magnolia State"
 ZMS_democratic:0 "Mississippi"
 ZMS_democratic_DEF:0 "Mississippi"
 ZMS_neutrality:0 "Mississippi"
 ZMS_neutrality_DEF:0 "Mississippi"
-ZMS_communism:0 "Yellowhammer Union"
-ZMS_communism_DEF:0 "The Yellowhammer Union"
+ZMS_communism:0 "Magnolia Union"
+ZMS_communism_DEF:0 "The Magnolia Union"
 ZMS_fascism_ADJ:0 "Mississippian"
 ZMS_democratic_ADJ:0 "Mississippian"
 ZMS_neutrality_ADJ:0 "Mississippian"
 ZMS_communism_ADJ:0 "Mississippian"
 
-ZMO_fascism:0 "Yellowhammer State"
-ZMO_fascism_DEF:0 "The Yellowhammer State"
+ZMO_fascism:0 "Ozark State"
+ZMO_fascism_DEF:0 "The Ozark State"
 ZMO_democratic:0 "Missouri"
 ZMO_democratic_DEF:0 "Missouri"
 ZMO_neutrality:0 "Missouri"
 ZMO_neutrality_DEF:0 "Missouri"
-ZMO_communism:0 "Yellowhammer Union"
-ZMO_communism_DEF:0 "The Yellowhammer Union"
+ZMO_communism:0 "Ozark Union"
+ZMO_communism_DEF:0 "The Ozark Union"
 ZMO_fascism_ADJ:0 "Missourian"
 ZMO_democratic_ADJ:0 "Missourian"
 ZMO_neutrality_ADJ:0 "Missourian"
 ZMO_communism_ADJ:0 "Missourian"
 
-ZMT_fascism:0 "Yellowhammer State"
-ZMT_fascism_DEF:0 "The Yellowhammer State"
+ZMT_fascism:0 "Big Sky State"
+ZMT_fascism_DEF:0 "The Big Sky State"
 ZMT_democratic:0 "Montana"
 ZMT_democratic_DEF:0 "Montana"
 ZMT_neutrality:0 "Montana"
 ZMT_neutrality_DEF:0 "Montana"
-ZMT_communism:0 "Yellowhammer Union"
-ZMT_communism_DEF:0 "The Yellowhammer Union"
+ZMT_communism:0 "Big Sky Union"
+ZMT_communism_DEF:0 "The Big Sky Union"
 ZMT_fascism_ADJ:0 "Montanan"
 ZMT_democratic_ADJ:0 "Montanan"
 ZMT_neutrality_ADJ:0 "Montanan"
 ZMT_communism_ADJ:0 "Montanan"
 
-ZNE_fascism:0 "Yellowhammer State"
-ZNE_fascism_DEF:0 "The Yellowhammer State"
+ZNE_fascism:0 "Cornhusker State"
+ZNE_fascism_DEF:0 "The Cornhusker State"
 ZNE_democratic:0 "Nebraska"
 ZNE_democratic_DEF:0 "Nebraska"
 ZNE_neutrality:0 "Nebraska"
 ZNE_neutrality_DEF:0 "Nebraska"
-ZNE_communism:0 "Yellowhammer Union"
-ZNE_communism_DEF:0 "The Yellowhammer Union"
+ZNE_communism:0 "Cornhusker Union"
+ZNE_communism_DEF:0 "The Cornhusker Union"
 ZNE_fascism_ADJ:0 "Nebraskan"
 ZNE_democratic_ADJ:0 "Nebraskan"
 ZNE_neutrality_ADJ:0 "Nebraskan"
 ZNE_communism_ADJ:0 "Nebraskan"
 
-ZNV_fascism:0 "Yellowhammer State"
-ZNV_fascism_DEF:0 "The Yellowhammer State"
+ZNV_fascism:0 "Silver State"
+ZNV_fascism_DEF:0 "The Silver State"
 ZNV_democratic:0 "Nevada"
 ZNV_democratic_DEF:0 "Nevada"
 ZNV_neutrality:0 "Nevada"
 ZNV_neutrality_DEF:0 "Nevada"
-ZNV_communism:0 "Yellowhammer Union"
-ZNV_communism_DEF:0 "The Yellowhammer Union"
+ZNV_communism:0 "Silver Union"
+ZNV_communism_DEF:0 "The Silver Union"
 ZNV_fascism_ADJ:0 "Nevadan"
 ZNV_democratic_ADJ:0 "Nevadan"
 ZNV_neutrality_ADJ:0 "Nevadan"
@@ -324,235 +324,235 @@ ZNG_democratic_ADJ:0 "New Englander"
 ZNG_neutrality_ADJ:0 "New Englander"
 ZNG_communism_ADJ:0 "New Englander"
 
-ZNJ_fascism:0 "Yellowhammer State"
-ZNJ_fascism_DEF:0 "The Yellowhammer State"
+ZNJ_fascism:0 "Garden State"
+ZNJ_fascism_DEF:0 "The Garden State"
 ZNJ_democratic:0 "New Jersey"
 ZNJ_democratic_DEF:0 "New Jersey"
 ZNJ_neutrality:0 "New Jersey"
 ZNJ_neutrality_DEF:0 "New Jersey"
-ZNJ_communism:0 "Yellowhammer Union"
-ZNJ_communism_DEF:0 "The Yellowhammer Union"
+ZNJ_communism:0 "Garden Union"
+ZNJ_communism_DEF:0 "The Garden Union"
 ZNJ_fascism_ADJ:0 "New Jerseyan"
 ZNJ_democratic_ADJ:0 "New Jerseyan"
 ZNJ_neutrality_ADJ:0 "New Jerseyan"
 ZNJ_communism_ADJ:0 "New Jerseyan"
 
-ZNY_fascism:0 "Yellowhammer State"
-ZNY_fascism_DEF:0 "The Yellowhammer State"
+ZNY_fascism:0 "Empire State"
+ZNY_fascism_DEF:0 "The Empire State"
 ZNY_democratic:0 "New York"
 ZNY_democratic_DEF:0 "New York"
 ZNY_neutrality:0 "New York"
 ZNY_neutrality_DEF:0 "New York"
-ZNY_communism:0 "Yellowhammer Union"
-ZNY_communism_DEF:0 "The Yellowhammer Union"
+ZNY_communism:0 "Empire Union"
+ZNY_communism_DEF:0 "The Empire Union"
 ZNY_fascism_ADJ:0 "New Yorker"
 ZNY_democratic_ADJ:0 "New Yorker"
 ZNY_neutrality_ADJ:0 "New Yorker"
 ZNY_communism_ADJ:0 "New Yorker"
 
-ZNC_fascism:0 "Yellowhammer State"
-ZNC_fascism_DEF:0 "The Yellowhammer State"
+ZNC_fascism:0 "Tar Heel State"
+ZNC_fascism_DEF:0 "The Tar Heel State"
 ZNC_democratic:0 "North Carolina"
 ZNC_democratic_DEF:0 "North Carolina"
 ZNC_neutrality:0 "North Carolina"
 ZNC_neutrality_DEF:0 "North Carolina"
-ZNC_communism:0 "Yellowhammer Union"
-ZNC_communism_DEF:0 "The Yellowhammer Union"
+ZNC_communism:0 "Tar Heel Union"
+ZNC_communism_DEF:0 "The Tar Heel Union"
 ZNC_fascism_ADJ:0 "North Carolinian"
 ZNC_democratic_ADJ:0 "North Carolinian"
 ZNC_neutrality_ADJ:0 "North Carolinian"
 ZNC_communism_ADJ:0 "North Carolinian"
 
-ZNM_fascism:0 "Yellowhammer State"
-ZNM_fascism_DEF:0 "The Yellowhammer State"
+ZNM_fascism:0 "Cactus State"
+ZNM_fascism_DEF:0 "The Cactus State"
 ZNM_democratic:0 "New Mexico"
 ZNM_democratic_DEF:0 "New Mexico"
 ZNM_neutrality:0 "New Mexico"
 ZNM_neutrality_DEF:0 "New Mexico"
-ZNM_communism:0 "Yellowhammer Union"
-ZNM_communism_DEF:0 "The Yellowhammer Union"
+ZNM_communism:0 "Cactus Union"
+ZNM_communism_DEF:0 "The Cactus Union"
 ZNM_fascism_ADJ:0 "New Mexican"
 ZNM_democratic_ADJ:0 "New Mexican"
 ZNM_neutrality_ADJ:0 "New Mexican"
 ZNM_communism_ADJ:0 "New Mexican"
 
-ZND_fascism:0 "Yellowhammer State"
-ZND_fascism_DEF:0 "The Yellowhammer State"
+ZND_fascism:0 "Rough Rider State"
+ZND_fascism_DEF:0 "The Rough Rider State"
 ZND_democratic:0 "North Dakota"
 ZND_democratic_DEF:0 "North Dakota"
 ZND_neutrality:0 "North Dakota"
 ZND_neutrality_DEF:0 "North Dakota"
-ZND_communism:0 "Yellowhammer Union"
-ZND_communism_DEF:0 "The Yellowhammer Union"
+ZND_communism:0 "Rough Rider Union"
+ZND_communism_DEF:0 "The Rough Rider Union"
 ZND_fascism_ADJ:0 "North Dakotan"
 ZND_democratic_ADJ:0 "North Dakotan"
 ZND_neutrality_ADJ:0 "North Dakotan"
 ZND_communism_ADJ:0 "North Dakotan"
 
-ZOH_fascism:0 "Yellowhammer State"
-ZOH_fascism_DEF:0 "The Yellowhammer State"
+ZOH_fascism:0 "Buckeye State"
+ZOH_fascism_DEF:0 "The Buckeye State"
 ZOH_democratic:0 "Ohio"
 ZOH_democratic_DEF:0 "Ohio"
 ZOH_neutrality:0 "Ohio"
 ZOH_neutrality_DEF:0 "Ohio"
-ZOH_communism:0 "Yellowhammer Union"
-ZOH_communism_DEF:0 "The Yellowhammer Union"
+ZOH_communism:0 "Buckeye Union"
+ZOH_communism_DEF:0 "The Buckeye Union"
 ZOH_fascism_ADJ:0 "Ohioan"
 ZOH_democratic_ADJ:0 "Ohioan"
 ZOH_neutrality_ADJ:0 "Ohioan"
 ZOH_communism_ADJ:0 "Ohioan"
 
-ZOK_fascism:0 "Yellowhammer State"
-ZOK_fascism_DEF:0 "The Yellowhammer State"
+ZOK_fascism:0 "Sooner State"
+ZOK_fascism_DEF:0 "The Sooner State"
 ZOK_democratic:0 "Oklahoma"
 ZOK_democratic_DEF:0 "Oklahoma"
 ZOK_neutrality:0 "Oklahoma"
 ZOK_neutrality_DEF:0 "Oklahoma"
-ZOK_communism:0 "Yellowhammer Union"
-ZOK_communism_DEF:0 "The Yellowhammer Union"
+ZOK_communism:0 "Sooner Union"
+ZOK_communism_DEF:0 "The Sooner Union"
 ZOK_fascism_ADJ:0 "Oklahoman"
 ZOK_democratic_ADJ:0 "Oklahoman"
 ZOK_neutrality_ADJ:0 "Oklahoman"
 ZOK_communism_ADJ:0 "Oklahoman"
 
-ZOR_fascism:0 "Yellowhammer State"
-ZOR_fascism_DEF:0 "The Yellowhammer State"
+ZOR_fascism:0 "Beaver State"
+ZOR_fascism_DEF:0 "The Beaver State"
 ZOR_democratic:0 "Oregon"
 ZOR_democratic_DEF:0 "Oregon"
 ZOR_neutrality:0 "Oregon"
 ZOR_neutrality_DEF:0 "Oregon"
-ZOR_communism:0 "Yellowhammer Union"
-ZOR_communism_DEF:0 "The Yellowhammer Union"
+ZOR_communism:0 "Beaver Union"
+ZOR_communism_DEF:0 "The Beaver Union"
 ZOR_fascism_ADJ:0 "Oregonian"
 ZOR_democratic_ADJ:0 "Oregonian"
 ZOR_neutrality_ADJ:0 "Oregonian"
 ZOR_communism_ADJ:0 "Oregonian"
 
-ZPA_fascism:0 "Yellowhammer State"
-ZPA_fascism_DEF:0 "The Yellowhammer State"
+ZPA_fascism:0 "Keystone State"
+ZPA_fascism_DEF:0 "The Keystone State"
 ZPA_democratic:0 "Pennsylvania"
 ZPA_democratic_DEF:0 "Pennsylvania"
 ZPA_neutrality:0 "Pennsylvania"
 ZPA_neutrality_DEF:0 "Pennsylvania"
-ZPA_communism:0 "Yellowhammer Union"
-ZPA_communism_DEF:0 "The Yellowhammer Union"
+ZPA_communism:0 "Keystone Union"
+ZPA_communism_DEF:0 "The Keystone Union"
 ZPA_fascism_ADJ:0 "Pennsylvanian"
 ZPA_democratic_ADJ:0 "Pennsylvanian"
 ZPA_neutrality_ADJ:0 "Pennsylvanian"
 ZPA_communism_ADJ:0 "Pennsylvanian"
 
-ZSC_fascism:0 "Yellowhammer State"
-ZSC_fascism_DEF:0 "The Yellowhammer State"
+ZSC_fascism:0 "Palmetto State"
+ZSC_fascism_DEF:0 "The Palmetto State"
 ZSC_democratic:0 "South Carolina"
 ZSC_democratic_DEF:0 "South Carolina"
 ZSC_neutrality:0 "South Carolina"
 ZSC_neutrality_DEF:0 "South Carolina"
-ZSC_communism:0 "Yellowhammer Union"
-ZSC_communism_DEF:0 "The Yellowhammer Union"
+ZSC_communism:0 "Palmetto Union"
+ZSC_communism_DEF:0 "The Palmetto Union"
 ZSC_fascism_ADJ:0 "South Carolinian"
 ZSC_democratic_ADJ:0 "South Carolinian"
 ZSC_neutrality_ADJ:0 "South Carolinian"
 ZSC_communism_ADJ:0 "South Carolinian"
 
-ZSD_fascism:0 "Yellowhammer State"
-ZSD_fascism_DEF:0 "The Yellowhammer State"
+ZSD_fascism:0 "Rushmore State"
+ZSD_fascism_DEF:0 "The Rushmore State"
 ZSD_democratic:0 "South Dakota"
 ZSD_democratic_DEF:0 "South Dakota"
 ZSD_neutrality:0 "South Dakota"
 ZSD_neutrality_DEF:0 "South Dakota"
-ZSD_communism:0 "Yellowhammer Union"
-ZSD_communism_DEF:0 "The Yellowhammer Union"
+ZSD_communism:0 "Rushmore Union"
+ZSD_communism_DEF:0 "The Rushmore Union"
 ZSD_fascism_ADJ:0 "South Dakotan"
 ZSD_democratic_ADJ:0 "South Dakotan"
 ZSD_neutrality_ADJ:0 "South Dakotan"
 ZSD_communism_ADJ:0 "South Dakotan"
 
-ZTN_fascism:0 "Yellowhammer State"
-ZTN_fascism_DEF:0 "The Yellowhammer State"
+ZTN_fascism:0 "Volunteer State"
+ZTN_fascism_DEF:0 "The Volunteer State"
 ZTN_democratic:0 "Tennessee"
 ZTN_democratic_DEF:0 "Tennessee"
 ZTN_neutrality:0 "Tennessee"
 ZTN_neutrality_DEF:0 "Tennessee"
-ZTN_communism:0 "Yellowhammer Union"
-ZTN_communism_DEF:0 "The Yellowhammer Union"
+ZTN_communism:0 "Volunteer Union"
+ZTN_communism_DEF:0 "The Volunteer Union"
 ZTN_fascism_ADJ:0 "Tennessean"
 ZTN_democratic_ADJ:0 "Tennessean"
 ZTN_neutrality_ADJ:0 "Tennessean"
 ZTN_communism_ADJ:0 "Tennessean"
 
-ZTX_fascism:0 "Yellowhammer State"
-ZTX_fascism_DEF:0 "The Yellowhammer State"
+ZTX_fascism:0 "Lone Star State"
+ZTX_fascism_DEF:0 "The Lone Star State"
 ZTX_democratic:0 "Texas"
 ZTX_democratic_DEF:0 "Texas"
 ZTX_neutrality:0 "Texas"
 ZTX_neutrality_DEF:0 "Texas"
-ZTX_communism:0 "Yellowhammer Union"
-ZTX_communism_DEF:0 "The Yellowhammer Union"
+ZTX_communism:0 "Lone Star Union"
+ZTX_communism_DEF:0 "The Lone Star Union"
 ZTX_fascism_ADJ:0 "Texan"
 ZTX_democratic_ADJ:0 "Texan"
 ZTX_neutrality_ADJ:0 "Texan"
 ZTX_communism_ADJ:0 "Texan"
 
-ZUT_fascism:0 "Yellowhammer State"
-ZUT_fascism_DEF:0 "The Yellowhammer State"
+ZUT_fascism:0 "Beehive State"
+ZUT_fascism_DEF:0 "The Beehive State"
 ZUT_democratic:0 "Utah"
 ZUT_democratic_DEF:0 "Utah"
 ZUT_neutrality:0 "Utah"
 ZUT_neutrality_DEF:0 "Utah"
-ZUT_communism:0 "Yellowhammer Union"
-ZUT_communism_DEF:0 "The Yellowhammer Union"
+ZUT_communism:0 "Beehive Union"
+ZUT_communism_DEF:0 "The Beehive Union"
 ZUT_fascism_ADJ:0 "Utahan"
 ZUT_democratic_ADJ:0 "Utahan"
 ZUT_neutrality_ADJ:0 "Utahan"
 ZUT_communism_ADJ:0 "Utahan"
 
-ZVA_fascism:0 "Yellowhammer State"
-ZVA_fascism_DEF:0 "The Yellowhammer State"
-ZVA_democratic:0 "Virginian"
-ZVA_democratic_DEF:0 "Virginian"
-ZVA_neutrality:0 "Virginian"
-ZVA_neutrality_DEF:0 "Virginian"
-ZVA_communism:0 "Yellowhammer Union"
-ZVA_communism_DEF:0 "The Yellowhammer Union"
+ZVA_fascism:0 "Old Dominion State"
+ZVA_fascism_DEF:0 "The Old Dominion State"
+ZVA_democratic:0 "Virginia"
+ZVA_democratic_DEF:0 "Virginia"
+ZVA_neutrality:0 "Virginia"
+ZVA_neutrality_DEF:0 "Virginia"
+ZVA_communism:0 "Old Dominion Union"
+ZVA_communism_DEF:0 "The Old Dominion Union"
 ZVA_fascism_ADJ:0 "Virginian"
 ZVA_democratic_ADJ:0 "Virginian"
 ZVA_neutrality_ADJ:0 "Virginian"
 ZVA_communism_ADJ:0 "Virginian"
 
-ZWA_fascism:0 "Yellowhammer State"
-ZWA_fascism_DEF:0 "The Yellowhammer State"
+ZWA_fascism:0 "Evergreen State"
+ZWA_fascism_DEF:0 "The Evergreen State"
 ZWA_democratic:0 "Washington"
 ZWA_democratic_DEF:0 "Washington"
 ZWA_neutrality:0 "Washington"
 ZWA_neutrality_DEF:0 "Washington"
-ZWA_communism:0 "Yellowhammer Union"
-ZWA_communism_DEF:0 "The Yellowhammer Union"
+ZWA_communism:0 "Evergreen Union"
+ZWA_communism_DEF:0 "The Evergreen Union"
 ZWA_fascism_ADJ:0 "Washingtonian"
 ZWA_democratic_ADJ:0 "Washingtonian"
 ZWA_neutrality_ADJ:0 "Washingtonian"
 ZWA_communism_ADJ:0 "Washingtonian"
 
-ZWI_fascism:0 "Yellowhammer State"
-ZWI_fascism_DEF:0 "The Yellowhammer State"
+ZWI_fascism:0 "Badger State"
+ZWI_fascism_DEF:0 "The Badger State"
 ZWI_democratic:0 "Wisconsin"
 ZWI_democratic_DEF:0 "Wisconsin"
 ZWI_neutrality:0 "Wisconsin"
 ZWI_neutrality_DEF:0 "Wisconsin"
-ZWI_communism:0 "Yellowhammer Union"
-ZWI_communism_DEF:0 "The Yellowhammer Union"
+ZWI_communism:0 "Badger Union"
+ZWI_communism_DEF:0 "The Badger Union"
 ZWI_fascism_ADJ:0 "Wisconsinite"
 ZWI_democratic_ADJ:0 "Wisconsinite"
 ZWI_neutrality_ADJ:0 "Wisconsinite"
 ZWI_communism_ADJ:0 "Wisconsinite"
 
-ZWY_fascism:0 "Yellowhammer State"
-ZWY_fascism_DEF:0 "The Yellowhammer State"
+ZWY_fascism:0 "Cowboy State"
+ZWY_fascism_DEF:0 "The Cowboy State"
 ZWY_democratic:0 "Wyoming"
 ZWY_democratic_DEF:0 "Wyoming"
 ZWY_neutrality:0 "Wyoming"
 ZWY_neutrality_DEF:0 "Wyoming"
-ZWY_communism:0 "Yellowhammer Union"
-ZWY_communism_DEF:0 "The Yellowhammer Union"
+ZWY_communism:0 "Cowboy Union"
+ZWY_communism_DEF:0 "The Cowboy Union"
 ZWY_fascism_ADJ:0 "Wyomingite"
 ZWY_democratic_ADJ:0 "Wyomingite"
 ZWY_neutrality_ADJ:0 "Wyomingite"
